--- a/appointment-booking-frontend/package.json
+++ b/appointment-booking-frontend/package.json
@@ -17,7 +17,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "tailwind:init": "tailwindcss init -p"
   },
   "eslintConfig": {
     "extends": [
@@ -38,10 +39,7 @@
     ]
   },
   "devDependencies": {
-    "@tailwindcss/postcss": "^4.1.11",
-    "autoprefixer": "^10.4.21",
-    "postcss": "^8.5.6",
     "postcss-import": "^16.1.1",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss-cli": "^0.1.2"
   }
 }
